# UDPVideoStreamer

./: CMakeLists.txt  PracticalSocket.cpp  PracticalSocket.h  README.md  Streamer.cpp  Streamer.h  main.cpp  viewer.py
